# phoenix-observability

./: .gitignore  README.md  pyproject.toml
phoenix_observability/: __init__.py  config.py  otel_setup.py  phoenix_session.py
phoenix_observability/instrumentation/: __init__.py  agent_wrapper.py  error_handler.py  llm_wrapper.py  pipeline_wrapper.py  rag_wrapper.py  structured_output.py
phoenix_observability/logging/: __init__.py  enrich.py  span_utils.py
phoenix_observability/utils/: __init__.py  accuracy.py  cache_metrics.py  cost_tracker.py  gpu_monitor.py  hallucination.py  latency.py  pii_safety.py  pipeline_tracker.py  sanitize.py  system_metrics.py
